# ai-native-core

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  GEMINI.md  MODELS.md  README.md  ROADMAP.md  biome.json  docker-compose.yml  lefthook.yml  package.json  pnpm-lock.yaml  pyproject.toml  turbo.json
.github/workflows/: eval.yml  test.yml
apps/api/: README.md  package.json  pyproject.toml  server.test.ts  server.ts  tsconfig.json  turbo.json
apps/api/src/api/: __main__.py  config.py  main.py
apps/api/src/api/auth/: __init__.py  crypto.py  deps.py
apps/api/src/api/routers/: auth.py  billing.py  chat.py  ingest.py  jobs.py
apps/desktop/: package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: main.rs
apps/docs/: package.json
apps/extension/: package.json
apps/extension/entrypoints/: background.ts  content.ts
apps/extension/entrypoints/popup/: App.tsx  index.html  main.tsx
apps/mobile/: .gitignore  app.json  babel.config.js  global.css  metro.config.js  package.json
apps/mobile/app/: _layout.tsx  index.tsx
apps/mobile/constants/: api.ts
apps/mobile/hooks/: use-location.ts  use-push-registration.ts
apps/mobile/lib/: api.ts  auth-client.ts
apps/playground/: next.config.js  package.json  tsconfig.json
apps/playground/app/: globals.css  layout.tsx  page.tsx
apps/playground/components/: providers.tsx  sidebar-nav.tsx
apps/server/: package.json  pyproject.toml
apps/server/tests/: conftest.py  test_admin_analytics.py  test_admin_evals.py  test_admin_tenants.py  test_admin_users.py  test_audit_logs.py  test_auth_api_key.py  test_auth_banned.py  test_auth_profile.py  test_billing_usage.py  test_budget_notifications.py  test_chat_service.py  test_chat_service_autotitle.py  test_context_service.py  test_conversations.py  test_feedback.py  test_guest_chat.py  test_health.py  test_notifications.py  test_organizations.py  test_preferences.py  test_rate_limit.py  test_rbac.py  test_rbac_permissions.py  test_referrals.py  test_sentry_init.py  test_session_repository.py  test_system_instructions.py  test_user_api_keys.py
apps/web/: README.md  auth.ts  next.config.js  package.json  proxy.ts  sentry.client.config.ts  sentry.edge.config.ts  tsconfig.json  turbo.json
apps/web/app/: chat-client.tsx  chat.module.css  chat.tsx  globals.css  layout.tsx  page.tsx
apps/web/components/: providers.tsx  user-menu.tsx
apps/web/src/: index.css  middleware.ts  proxy.ts
apps/web/src-tauri/: Cargo.toml  tauri.conf.json
apps/worker/: package.json  pyproject.toml
apps/worker/src/worker/: __main__.py  logging.py  main.py
docs/superpowers/plans/: 2026-04-25-phase-12-architecture-refactor.md  2026-04-26-auth-optional-saas-ready.md  2026-04-27-admin-dashboard.md  2026-04-27-chat-history.md  2026-04-27-email-notifications.md  2026-04-27-phase-14-auth-completion.md  2026-04-27-rbac.md  2026-04-27-user-settings.md  2026-04-28-organizations.md  2026-04-28-rate-limiting.md  2026-04-29-audit-log.md  2026-04-29-custom-system-instructions.md  2026-04-30-2fa-totp.md  2026-04-30-documentation-update.md  2026-05-25-phase-22-observability.md  2026-05-27-phase-23-mobile-parity.md
docs/superpowers/specs/: 2026-04-25-phase-12-architecture-design.md  2026-04-27-admin-dashboard-design.md  2026-04-27-chat-history-design.md  2026-04-27-email-notifications-design.md  2026-04-27-rbac-design.md  2026-04-27-user-settings-design.md  2026-04-28-organizations-design.md  2026-04-28-rate-limiting-design.md  2026-04-29-audit-log-design.md  2026-04-29-custom-system-instructions-design.md  2026-04-30-2fa-totp-design.md  2026-04-30-documentation-update-design.md  2026-05-25-phase-22-observability-design.md  2026-05-27-phase-23-mobile-parity-design.md
services/agents/: package.json
services/agents/tests/: conftest.py  test_chat_agent.py  test_tool_calling.py  test_utils.py
services/ai/: package.json  pyproject.toml
services/ai/src/ai/: __init__.py  base.py  factory.py  failover.py  pricing.py  retry.py  utils.py
services/ai/src/ai/providers/: anthropic.py  ollama.py  openai.py  openrouter.py
services/ai/tests/: test_failover.py  test_retry.py
services/memory/: package.json  pyproject.toml
services/memory/src/memory/: __init__.py  budget.py  compressor.py  episodic.py  extractor.py  session.py
services/memory/tests/: test_monthly_budget.py
services/rag/: package.json  pyproject.toml
services/rag/src/rag/: retriever.py
services/rag/src/rag/ingest/: loaders.py
services/tools/: package.json
services/tools/tests/: test_weather.py
(+252 files in other folders)
