[project]
name = "ai-native-core"
version = "0.1.0"
description = "AI Native Core monorepo root"
requires-python = ">=3.11"

[tool.uv.workspace]
members = [
    "packages/ai",
    "packages/agents",
    "packages/rag",
    "packages/tools",
    "packages/prompts",
    "apps/api",
    "apps/worker",
]

# Sync all workspace members by default
[tool.uv]
default-groups = ["dev"]
package = false

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "respx>=0.21",
    "ruff>=0.6",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["packages", "apps"]
python_files = ["test_*.py", "*_test.py"]
