[project]
name = "api"
version = "0.1.0"
description = "FastAPI AI orchestration server"
requires-python = ">=3.11"
dependencies = [
    "ai",
    "agents",
    "memory",
    "rag",
    "tools",
    "prompts",
    "fastapi[standard]>=0.115",
    "asyncer>=0.0.8",
    "anyio>=4.0",
    "python-dotenv>=1.0",
    "pydantic[email]>=2.0",
    "pydantic-settings>=2.0",
    "structlog>=24.0",
    "asyncpg>=0.29",
    "arq>=0.26",
    "python-jose[cryptography]>=3.3",
    "bcrypt>=4.0",
    "stripe>=10.0",
]

[tool.uv.sources]
ai = { workspace = true }
agents = { workspace = true }
memory = { workspace = true }
rag = { workspace = true }
tools = { workspace = true }
prompts = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/api"]

[tool.fastapi]
entrypoint = "api.main:app"

[project.scripts]
api-dev = "api.__main__:main"
