[project]
name = "ai"
version = "0.1.0"
description = "Model abstraction layer — BaseLLM protocol and provider factory"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "httpx>=0.27",
    "openai>=1.0",
    "anthropic>=0.30",
    "structlog>=24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ai"]
