[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "memory"
version = "0.1.0"
description = "Session and episodic memory for AI agents"
requires-python = ">=3.11"
dependencies = [
    "ai",
    "asyncpg>=0.29",
    "langchain-core>=0.3",
    "pydantic>=2.0",
    "structlog>=24.0",
]

[tool.uv.sources]
ai = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["src/memory"]
