[project]
name = "rag"
version = "0.1.0"
description = "Ingestion and retrieval pipeline — chunking, embeddings, pgvector"
requires-python = ">=3.11"
dependencies = [
    "ai",
    "asyncpg>=0.29",
    "pydantic>=2.0",
    "structlog>=24.0",
]

[tool.uv.sources]
ai = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rag"]
