[package]
name = "ai-native-desktop"
version = "0.1.0"
description = "AI Native desktop app (Tauri wrapper around the web frontend)"
authors = []
license = ""
repository = ""
edition = "2021"

[lib]
name = "ai_native_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
